Spew ion IR to local directory instead of /tmp (bug 717788, r=dvander).